docs/public/assets/css/preview.css
/* ... */
.doc-image-canvas img {
  flex: 1;
  width: 80%;
}

.doc-image-canvas--size-small img {
  max-width: 220px;
  max-height: 120px;
}

.doc-image-canvas--size-normal img {
  max-width: 440px;
  max-height: 220px;
}

.doc-image-canvas--size-large img {
  max-width: 880px;
  max-height: 440px;
}

.doc-link-cards {
  display: flex;
  flex-wrap: wrap;
  gap: 1rem;
  margin-top: 1rem;
  margin-bottom: 2rem;
}

.doc-link-cards > a {
  flex: none;
  width: 100%;
}

@media screen and (min-width: 769px), print {
  .doc-link-cards > a {
    width: calc(50% - 0.5rem);
  }
}
/***************************************
 * SUPPORT
 ***************************************/

.support {
  display: flex;
  gap: 1rem;
  padding-top: 2rem;
}

.support > a {
  flex: 1;
  display: flex;
  flex-direction: column;
  text-decoration: none;
  padding: 1.5rem;
  border-radius: 12px;
  box-shadow: var(--bal-shadow-normal);
  transition: box-shadow 0.3s cubic-bezier(0.25, 0.8, 0.5, 1);
  background-color: #fff9e8;
}

.support > a:hover {
  box-shadow: var(--bal-shadow-large) !important;
}

.support__icon {
  font-size: 3rem !important;
  line-height: 4rem !important;
  text-align: center;
}

.support__title {
  font-family: 'BaloiseCreateHeadline';
  font-size: 1.2rem !important;
  font-weight: 700 !important;
  margin-top: 1rem !important;
  color: var(--bal-color-primary);
}

.support__label {
  font-size: 1rem !important;
  font-weight: 400;
  color: var(--bal-color-primary);
}

/*

.features {
  padding: 1.2 rem 0;
  display: flex;
  flex-wrap: wrap;
  align-items: flex-start;
  align-content: stretch;
  justify-content: space-between;
}

.feature {
  flex-grow: 1;
  flex-basis: 30%;
  max-width: 30%;
}

.feature h2 {
  font-size: 1.4rem !important;
  font-weight: 300 !important;
  line-height: 0 !important;
  border-bottom: none;
  padding-bottom: 0;
}

a.feature {
  text-decoration: none;
  font-size: 16px;
}

a.feature h2 {
  text-align: center;
}

a.feature h4 {
  text-align: center;
  text-decoration: none;
  color: #333 !important;
  font-size: 16px !important;
  margin-bottom: 32px;
}

a.feature h2 img {
  width: 64px;
  max-width: 100%;
  border-radius: 100%;
}

.feature {
  flex-basis: 50% !important;
  max-width: 50% !important;
}

@media only screen and (min-width: 420px) {
  .feature {
    flex-basis: 20% !important;
    max-width: 20% !important;
  }
}

code.sbdocs-code {
  background: #f5f6ff !important;
  border-color: #cccfe2 !important;
  color: var(--bal-color-primary) !important;
}

table.sbdocs-table thead tr th,
table.sbdocs-table tbody tr td {
  color: var(--bal-color-primary);


.sbdocs-a.button {
  text-decoration: none;
}

.welcome-stage {
  margin-left: -64px;
  margin-right: -64px;
}

.welcome-stage-body {
  padding-top: 64px !important;
  padding-left: 16px;
  padding-right: 16px;
}

.docs-story .st0 {
  fill: inherit !important;
}

.my-doc-content {
  padding-top: 20px;
}

.framework-angular,
.framework-html,
.framework-react,
.framework-vue {
  display: none;
  visibility: hidden;
}

.my-framework-angular .framework-angular,
.my-framework-html .framework-html,
.my-framework-react .framework-react,
.my-framework-vue .framework-vue {
  display: inherit;
  visibility: visible;
}

.my-preview-html {
  position: relative;
  overflow: hidden;
  margin: 25px 0 40px;
  border-radius: 4px;
  background: #ffffff;
  box-shadow: rgb(0 0 0 / 10%) 0 1px 3px 0;
  border: 1px solid rgba(0, 0, 0, 0.1);
}

.my-preview-html > div {
  display: block;
  position: relative;
  flex-flow: column wrap;
  overflow: auto;
  padding: 30px 20px;
  margin: -10px;
}


.columns {
  margin-left: calc(var(--bal-column-gap) * -1) !important;
  margin-right: calc(var(--bal-column-gap) * -1) !important;
  margin-top: calc(var(--bal-column-gap) * -1) !important;
}

.my-welcome-guides .bal-list {
  max-width: 520px;
}

ul.sbdocs-ul {
  margin-bottom: 1.5rem;
}

li.sbdocs-li {
  font-family: 'BaloiseCreateText';
  font-size: 1rem;
  color: var(--bal-color-primary);
  hyphens: auto;
  margin-bottom: 0.5rem;
}

li.sbdocs-li:last-child {
  margin-bottom: 0;
}

li.sbdocs-li::marker {
  color: var(--bal-color-blue);
}



.sbdocs td > code,
.sbdocs code:not(.language-diff) {
  border: 1px solid #b3b6d4 !important;
  color: var(--bal-color-primary) !important;
  background-color: #e5e7f0 !important;
  padding: 3px 5px;
  white-space: nowrap;
  border-radius: 3px;
  font-size: 13px;
}

bal-doc-download bal-card-content {
  padding: 0.5rem 1rem !important;
}

pre.my-diff-source {
  font-size: 13px !important;
  padding: 20px !important;
  background: #fafafa !important;
  border: 1px solid rgba(0, 0, 0, 0.1) !important;
  margin: 25px 0 40px !important;
  border-radius: 4px !important;
  box-shadow: rgb(0 0 0 / 10%) 0 1px 3px 0 !important;
  font-family: ui-monospace, Menlo, Monaco, 'Roboto Mono', 'Oxygen Mono', 'Ubuntu Monospace', 'Source Code Pro',
    'Droid Sans Mono', 'Courier New', monospace !important;
  -webkit-font-smoothing: antialiased !important;
}

pre.my-diff-source code {
  padding: 0 !important;
}

div.has-visible-overflow,
div.has-visible-overflow.sbdocs-preview,
div.has-visible-overflow > .docs-story,
div.has-visible-overflow > .docs-story > div:first-child {
  overflow: visible !important;
  z-index: 10 !important;
}

div.has-visible-overflow > .docs-story > div:nth-child(2) {
  bottom: 10px;
}

.sbdocs a.bal-list__item__trigger {
  text-decoration: none !important;
}

.sbdocs a.bal-list__item__trigger p {
  font-weight: 400;
}

.sbdocs a.bal-list__item__trigger:hover .title,
.sbdocs a.bal-list__item__trigger:hover p {
  color: #0014aa !important;
}

.sbdocs a.bal-list__item__trigger:hover:after {
  background: #0014aa !important;
}



.my-layout-story bal-app.has-sticky-footer {
  min-height: 50vh;
}

hr.sbdocs-hr {
  height: 2px;
}

